--- a/position.html
+++ b/position.html
@@ -125,7 +125,7 @@
     </div>
 
    </main>
-   <footer>
+   <footer class="footer-class">
     <div class="footers">
         <div class="footer1">
             <img class="foot-img" src="./image/logo.png">
